MenuService return Menu now instead of Product tests are added